feat: implement pinia as state manager and add the business logic

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "pinia": "^2.1.7",
+    "uuidv7": "^1.0.1",
     "vue": "^3.4.29"
   },
   "devDependencies": {
